# sfxr-qt

./: .gitignore  CMakeLists.txt  README.md
.clickable/amd64/: Dockerfile  name.txt
.clickable/armhf/: Dockerfile  name.txt
core/: BaseSound.cpp  BaseSound.h  BaseSound.yaml  BaseSoundListModel.cpp  BaseSoundListModel.h  BaseWavSaver.cpp  Sound.cpp  Sound.h  SoundListModel.cpp  SoundListModel.h  SoundPlayer.cpp  SoundUtils.cpp  SoundUtils.h  Synthesizer.cpp  Synthesizer.h  WavSaver.cpp  WaveForm.cpp  WaveForm.h  basesound.cpp  basesound.h  basesoundlistmodel.cpp  basewavsaver.cpp  basewavsaver.h  generator.cpp  generator.h  soundplayer.cpp  synthesizer.h  wavsaver.cpp
lib/: CMakeLists.txt  FindSDL2.cmake
packaging/ubuntu_touch/: clickable.json  manifest.json  manifest.json.in  sfxr-qt.desktop  sfxr.apparmor  sfxr.desktop
ui/: About.qml  CollapseButton.qml  EnvelopEffect.qml  ExportHandler.qml  ExportWrapper.qml  FilterEffect.qml  FrequencyEffect.qml  Generator.cpp  Generator.h  Home.qml  HomeButton.qml  OthersEffect.qml  PageWrapper.qml  PlayBar.qml  SliderGroup.qml  SoundBoard.qml  SoundEffectGroup.qml  SoundItem.qml  SoundListView.qml  SoundSampleGenerators.qml  SoundSlider.qml  SwipableItem.qml  TestGRid.qml  ToolButton.qml  WaveFormSelector.qml  main.cpp  main.qml  main_mobile.qml  qml.qrc  qtquickcontrols2.conf
ui/ubuntu_touch/: ExportDialog.qml  UTFileExport.qml  UTFileExportHandler.qml
